# CGF

./: .gitignore  .hgignore  CMakeLists.txt  README.md
examples/01_Movement/: 01_Movement.cbp  01_Movement.layout  PlayState.h
examples/02_Sprites/: 02_Sprites.cbp
examples/03_Tiling/: 03_Tiling.cbp  03_Tiling.depend  03_Tiling_Solution.cbp  PlayState_Solution.cpp
examples/04_Collisions/: 04_Collisions.cbp  04_Collisions_Solution.cbp  PlayState.cpp  PlayState_Solution.cpp
examples/05_Physics/: 05_Physics.cbp  05_Physics_Solution.cbp  PlayState.cpp  PlayState_Solution.cpp
examples/06_Audio/: 06_Audio.cbp  06_Audio_Solution.cbp  PlayState_Solution.cpp
examples/07_IA/: 07_IA.cbp  PlayState.cpp
lib/CGF/include/: ClockHUD.h  Debug.h  EEDebugDraw3.h  Game.h  Physics.h  Sprite.h  TextureManager.h
lib/CGF/include/tmx/: MapLoader.h  MapObject.h
lib/CGF/source/: Game.cpp  Physics.cpp  Sprite.cpp  TextureManager.cpp
lib/CGF/source/tmxloader/: MapLoaderPrivate.cpp  MapLoaderPublic.cpp
lib/SFML-2.4.0/: CMakeLists.txt
